# cipherdrive

./: CMakeLists.txt  CMakeLists.txt.txt  chapoly_nbd.c  encdrive.py  nbd_chacha.c  prj.conf
scripts/: cipherdrive.service
src/: encryption_driver.c  main.c
src/filesystem/: cipherdrive.c
